# skillnova

./: .gitignore  CONTRIBUTORS.md  README.md  gemini-agent.js  gemini-agent.test.js  git init.md  index.html  package-lock.json  package.json  requirements.txt  script.js  server.py  styles.css
.github/: copilot-instructions.md
backend/: .env  package-lock.json  package.json  server.js
backend/controllers/: aiController.js  careerController.js
backend/routes/: aiRoutes.js  careerRoutes.js
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CareerCard.jsx  GlassCard.jsx  Navbar.jsx  SkillGapBar.jsx
frontend/src/pages/: CareerExplorer.jsx  Dashboard.jsx  LandingPage.jsx  NovaChat.jsx  SkillAnalyzer.jsx
legacy/: README.md  package-lock.json  pyproject.toml  server.py  styles.css
local-node/global/: kirox  kirox.cmd  kirox.ps1
skillnova/: README.md  __init__.py  main.py
src/: gemini-agent.ts  index.ts
tests/: test_main.py
